23-07-07 initial commit for version management. wip stage for now

--- a/enblocal.ini
+++ b/enblocal.ini
@@ -15,20 +15,12 @@ VSyncSkipNumFrames=0
 EnableFPSLimit=false
 FPSLimit=61.0
 
-[INPUT]
-KeyCombination=18
-KeyUseEffect=50
-KeyFPSLimit=0
-KeyShowFPS=0
-KeyScreenshot=46
-KeyEditor=49
-KeyDof=0
-
 [ANTIALIASING]
 EnableEdgeAA=false
+DeblurGameTAA=true
 
 [DITHERING]
-EnablePrepass=true
+EnablePrepass=false
 EnablePostpass=true
 AmountPrepass=1.0
 AmountPostpass=1.0
@@ -40,9 +32,27 @@ FixReflectionThirdPerson=true
 IgnoreInventory=true
 DisableGameDOF=true
 FixBlackHair=true
+IgnoreLoadingScreen=true
 
 [FILE]
 ScreenshotFormat=1
 
 [GUI]
 HighResolutionScaling=true
+ShowShadersWindow=false
+ShowWeatherWindow=true
+ShowObjectsWindow=false
+OpenOnStartup=true
+[INPUT]
+KeyCombination=16
+KeyUseEffect=8
+KeyFPSLimit=36
+KeyShowFPS=106
+KeyScreenshot=220
+KeyEditor=13
+KeyDof=118
+[FPSCOUNTER]
+Enable=false
+FontScale=20.0
+FontOpacity=0.6
+FontColor=1, 1, 1
