--- a/enbseries/enbadaptation.fx.ini
+++ b/enbseries/enbadaptation.fx.ini
@@ -2,8 +2,13 @@
 TECHNIQUE=1
 いいいいいいいいいい=0
 =0
-Auto Exposure Bias (log2 scale)=1.4
-Adapt Max Brightness (log2 scale)=-1.0
-Adapt Min Brightness (log2 scale)=-4.0
-Adapt Low  Percent=0.72
-Adapt High Percent=0.95
+Auto Exposure Bias (log2 scale)=0.5
+Adapt Max Brightness (log2 scale)=3.0
+Adapt Min Brightness (log2 scale)=-9.0
+Adapt Low  Percent=0.7
+Adapt High Percent=0.85
+Auto Exposure Night=0.5
+Adapt Max Brightness Night=3.0
+Adapt Min Brightness Night=-9.0
+Adapt Low  Percent Night=0.7
+Adapt High Percent Night=0.85
