--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,10 +1,10 @@
 [ENBBLOOM.FX]
-TECHNIQUE=2
-Contrast=1.0
-CC: In black=0.0
+TECHNIQUE=4
+Contrast=0.95
+CC: In black=0.03
 CC: In white=1.0
 CC: Out black=0.0
-CC: Out white=0.5
+CC: Out white=1.0
 CC: SaturationX=1.0
 CC: SaturationY=1.0
 CC: SaturationZ=1.0
@@ -17,13 +17,13 @@ by The Sandvich Maker=0
 =0
 ««« Prepass »»»=0
 Discard OOB Samples=true
-Sky Fade=0.0
+Sky Fade=1.0
 Use Threshold=false
 Threshold Style=0
 Threshold Luma Style=1
-Threshold=0.0
+Threshold=0.02
 Threshold Softness=0.5
-Pre-Saturation=1.5
+Pre-Saturation=2.25
 Tonemap Input=false
 ««« Gaussian Bloom »»»=0
 Use 512x512 Texture=true
@@ -57,3 +57,13 @@ Inverse Tonemap=false
 ««« LensDirt »»»=0
 Amount=0.0
 Dirt Texture Saturation=0.0
+ED - Contrast=1.05
+ED - In black=0.02
+ED - In white=1.0
+ED - Out black=0.0
+ED - Out white=1.0
+I - Contrast=0.95
+I - In black=0.03
+I - In white=1.0
+I - Out black=0.0
+I - Out white=1.0
