--- a/enbseries/enbsunsprite.fx.ini
+++ b/enbseries/enbsunsprite.fx.ini
@@ -1,3 +1,103 @@
 [ENBSUNSPRITE.FX]
 TECHNIQUE=0
 Lenz flare intensity=0.25
++++++ Lens +++++=0
+Shutter Leaf=6
+F-Number=8.0
+Offset Angle(°)=36
++++++ Glare +++++=0
+Glare_Diff_Curve=8.0
+Glare_Diff_Intensity=8.0
+Glare_Intensity=0.0
+Glare_AlphaWeight=0.0
+Glare_Tint=1, 1, 1
++++++ Corona +++++=0
+Corona_Radius=0.5
+Corona_Intensity=1.0
++++++ Sprite +++++=0
+Sprite_Intensity=0.01
+Sprite_Scale=0.1
++++++ Group1 +++++=0
+G1_Offset_Scale=0.22
+G1_Scale=1.0
+G1_Intensity=0.0
+G1_Edge_Intensity=5.0
+G1_Edge_Curve=6.0
+G1_Chroma=1.0
+G1_Tint=0.498, 1, 1
++++++ Group2 +++++=0
+G2_Offset_Scale=0.18
+G2_Scale=1.0
+G2_Intensity=0.0
+G2_Edge_Intensity=2.0
+G2_Edge_Curve=5.0
+G2_Chroma=1.04
+G2_Tint=0.498, 1, 1
++++++ Group3 +++++=0
+G3_Offset_Scale=0.12
+G3_Scale=1.0
+G3_Intensity=0.0
+G3_Edge_Intensity=2.0
+G3_Edge_Curve=5.0
+G3_Chroma=1.04
+G3_Tint=0.498, 1, 1
++++++ Group4 +++++=0
+G4_Offset_Scale=0.08
+G4_Scale=0.73
+G4_Intensity=0.0
+G4_Edge_Intensity=1.0
+G4_Edge_Curve=5.0
+G4_Chroma=1.1
+G4_Tint=0.498, 1, 1
++++ Secondary Sprite1 +++=0
+S1_Scale=1.0
+S1_Intensity=0.01
+S1_Offset=1.45
+S1_Axis(°)=0
+S1_Edge_Curve=5.0
+S1_Edge_Intensity=0.25
+S1_VigRadius=0.33
+S1_Feather=0.2
+S1_Distort_Offset=-1.56
+S1_Distort_Scale=-0.6
+S1_Chroma=0.5
+S1_Tint=1, 1, 1
++++ Secondary Sprite2 +++=0
+S2_Scale=0.0
+S2_Intensity=0.0
+S2_Offset=-1.65
+S2_Axis(°)=0
+S2_Edge_Curve=5.0
+S2_Edge_Intensity=0.0
+S2_VigRadius=0.5
+S2_Feather=0.8
+S2_Distort_Offset=1.95
+S2_Distort_Scale=-0.52
+S2_Chroma=1.02
+S2_Tint=0.498, 1, 1
++++ Secondary Sprite3 +++=0
+S3_Scale=0.0
+S3_Intensity=0.0
+S3_Offset=0.0
+S3_Axis(°)=0
+S3_Edge_Curve=8.0
+S3_Edge_Intensity=3.0
+S3_VigRadius=0.5
+S3_Feather=0.7
+S3_Distort_Offset=0.6
+S3_Distort_Scale=-0.25
+S3_Chroma=1.06
+S3_Tint=0.498, 1, 1
++++ Secondary Sprite4 +++=0
+S4_Scale=2.0
+S4_Intensity=0.01
+S4_Offset=0.66
+S4_Axis(°)=0
+S4_Edge_Curve=4.0
+S4_Edge_Intensity=0.25
+S4_VigRadius=0.5
+S4_Feather=0.33
+S4_Distort_Offset=1.95
+S4_Distort_Scale=-0.5
+S4_Chroma=0.1
+S4_Tint=0.498, 1, 1
