nighttime lighting rework (wip), overall ambient lighting increased.

--- a/enblocal.ini
+++ b/enblocal.ini
@@ -39,7 +39,7 @@ ScreenshotFormat=1
 
 [GUI]
 HighResolutionScaling=true
-ShowShadersWindow=false
+ShowShadersWindow=true
 ShowWeatherWindow=true
 ShowObjectsWindow=false
 OpenOnStartup=true
