clear day / clear aurora day sunlight yellower

--- a/enblocal.ini
+++ b/enblocal.ini
@@ -6,14 +6,15 @@ ProxyLibrary=
 [PERFORMANCE]
 SpeedHack=true
 ShaderCache=true
+ENBLITE=false
 
 [ENGINE]
 ForceVSync=false
 VSyncSkipNumFrames=0
 
 [LIMITER]
-EnableFPSLimit=false
-FPSLimit=61.0
+EnableFPSLimit=true
+FPSLimit=120.0
 
 [ANTIALIASING]
 EnableEdgeAA=false
@@ -21,7 +22,7 @@ DeblurGameTAA=true
 
 [DITHERING]
 EnablePrepass=false
-EnablePostpass=true
+EnablePostpass=false
 AmountPrepass=1.0
 AmountPostpass=1.0
 
@@ -40,9 +41,10 @@ ScreenshotFormat=1
 [GUI]
 HighResolutionScaling=true
 ShowShadersWindow=true
-ShowWeatherWindow=true
+ShowWeatherWindow=false
 ShowObjectsWindow=false
-OpenOnStartup=true
+OpenOnStartup=false
+
 [INPUT]
 KeyCombination=16
 KeyUseEffect=8
@@ -51,8 +53,17 @@ KeyShowFPS=106
 KeyScreenshot=220
 KeyEditor=13
 KeyDof=118
+
 [FPSCOUNTER]
 Enable=false
 FontScale=20.0
 FontOpacity=0.6
 FontColor=1, 1, 1
+
+[EXTENDER]
+UIFontScalingOverride=0.0
+UIUseMonospaceFont=false
+UsePerformanceMode=false
+SaveWeatherWithConfig=true
+EnableExternalShaderCache=true
+EnableFallthroughShaderCaching=true
