--- a/enbseries.ini
+++ b/enbseries.ini
@@ -1,5 +1,7 @@
 [GLOBAL]
 UseEffect=true
+QualityBoost=true
+ApplyDynamicCubemapEverywhere=true
 
 [EFFECT]
 UseOriginalPostProcessing=false
@@ -41,6 +43,7 @@ EnableComplexParallaxShadows=true
 EnableComplexTerrainParallax=true
 EnableComplexTerrainParallaxShadows=true
 EnableComplexMaterial=true
+EnableDynamicCubemap=true
 
 [COLORCORRECTION]
 UsePaletteTexture=true
@@ -367,7 +370,6 @@ DirectLightingColorFilterDusk=1, 1, 1
 DirectLightingColorFilterNight=1, 1, 1
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
-
 AmbientLightingIntensityDawn=1.4
 AmbientLightingIntensitySunrise=1.48
 AmbientLightingIntensityDay=1.62
@@ -384,7 +386,6 @@ AmbientLightingDesaturationDusk=0.0
 AmbientLightingDesaturationNight=0.0
 AmbientLightingDesaturationInteriorDay=0.0
 AmbientLightingDesaturationInteriorNight=0.0
-
 PointLightingIntensityDawn=1.0
 PointLightingIntensitySunrise=1.0
 PointLightingIntensityDay=1.0
@@ -409,7 +410,6 @@ PointLightingDesaturationDusk=0.0
 PointLightingDesaturationNight=0.0
 PointLightingDesaturationInteriorDay=0.0
 PointLightingDesaturationInteriorNight=0.0
-
 SpecularAmountMultiplierDawn=2.0
 SpecularAmountMultiplierSunrise=2.0
 SpecularAmountMultiplierDay=2.0
@@ -426,7 +426,6 @@ SpecularPowerMultiplierDusk=0.66
 SpecularPowerMultiplierNight=0.66
 SpecularPowerMultiplierInteriorDay=0.75
 SpecularPowerMultiplierInteriorNight=0.75
-
 FogColorMultiplierDawn=1.4
 FogColorMultiplierSunrise=1.25
 FogColorMultiplierDay=1.5
@@ -475,7 +474,6 @@ FogColorFilterDusk=1, 1, 1
 FogColorFilterNight=1, 1, 1
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
-
 ColorPowDawn=1.0
 ColorPowSunrise=1.0
 ColorPowDay=1.0
@@ -681,6 +679,16 @@ LightAmountMultiplierNight=0.66
 LightAmountMultiplierInteriorDay=0.66
 LightAmountMultiplierInteriorNight=0.66
 IgnoreWeatherSystemInterior=false
+ReflectionAmountMultiplierDawn=1.0
+ReflectionAmountMultiplierSunrise=1.0
+ReflectionAmountMultiplierDay=1.0
+ReflectionAmountMultiplierSunset=1.0
+ReflectionAmountMultiplierDusk=1.0
+ReflectionAmountMultiplierNight=1.0
+ReflectionAmountMultiplierInteriorDay=1.0
+ReflectionAmountMultiplierInteriorNight=1.0
+ReflectionFresnelMin=0.1
+ReflectionFresnelCurve=2.0
 
 [GRASS]
 IgnoreWeatherSystem=false
@@ -989,7 +997,7 @@ MultiplicativeAmountInteriorDay=0.0
 MultiplicativeAmountInteriorNight=0.0
 ReflectiveAmountDawn=0.03
 ReflectiveAmountSunrise=0.04
-ReflectiveAmountDay=0.1
+ReflectiveAmountDay=0.08
 ReflectiveAmountSunset=0.04
 ReflectiveAmountDusk=0.03
 ReflectiveAmountNight=0.33
@@ -1138,7 +1146,7 @@ IgnoreWeatherSystem=false
 EnableCubemap=true
 EnableGlossiness=true
 AntialiasingQuality=0
-FresnelMin=0.08
+FresnelMin=0.03
 FresnelCurve=1.35
 GlossinessDawn=0.8
 GlossinessSunrise=0.75
@@ -1479,8 +1487,10 @@ DetailedShadowQuality=2
 DetailedShadowInteriorQuality=2
 EnableDistantShadowAtNight=true
 ShadowQuality=2
+
 [NORMALMAPPINGSHADOWS]
 Quality=2
+
 [COMPLEXGRASS]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
@@ -1538,6 +1548,7 @@ SpecularPowerMultiplierDusk=1.0
 SpecularPowerMultiplierNight=1.0
 SpecularPowerMultiplierInteriorDay=1.0
 SpecularPowerMultiplierInteriorNight=1.0
+
 [SNOW]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
@@ -1560,11 +1571,13 @@ LightingInfluenceDusk=1.0
 LightingInfluenceNight=1.0
 LightingInfluenceInteriorDay=1.0
 LightingInfluenceInteriorNight=1.0
+
 [GRASSCOLLISIONS]
 Decay=2.0
 FadeRandomization=0.6
 Elasticity=2.0
 Flexibility=0.5
+
 [COMPLEXPARALLAX]
 TextureQuality=0
 QualityNear=1
@@ -1576,6 +1589,7 @@ DirectShadowsQualityFar=1
 PointShadowsQualityNear=1
 PointShadowsQualityMiddle=1
 PointShadowsQualityFar=1
+
 [COMPLEXTERRAINPARALLAX]
 TextureQuality=0
 QualityNear=1
@@ -1587,6 +1601,7 @@ DirectShadowsQualityFar=1
 PointShadowsQualityNear=1
 PointShadowsQualityMiddle=1
 PointShadowsQualityFar=1
+
 [COMPLEXMATERIAL]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=true
@@ -1608,3 +1623,8 @@ BodyGlossinessMapAmountDusk=1.0
 BodyGlossinessMapAmountNight=1.0
 BodyGlossinessMapAmountInteriorDay=1.0
 BodyGlossinessMapAmountInteriorNight=1.0
+
+[EXTENDER]
+EnableFileRelativeInclude=true
+AllowMissingIncludeFiles=true
+UseNewD3DCompiler=true
