--- a/enbseries/enbsunsprite.fx.ini
+++ b/enbseries/enbsunsprite.fx.ini
@@ -4,7 +4,7 @@ Lenz flare intensity=0.25
 +++++ Lens +++++=0
 Shutter Leaf=6
 F-Number=8.0
-Offset Angle(°)=36
+Offset Angle(?=0
 +++++ Glare +++++=0
 Glare_Diff_Curve=8.0
 Glare_Diff_Intensity=8.0
@@ -53,7 +53,7 @@ G4_Tint=0.498, 1, 1
 S1_Scale=1.0
 S1_Intensity=0.01
 S1_Offset=1.45
-S1_Axis(°)=0
+S1_Axis(?=0
 S1_Edge_Curve=5.0
 S1_Edge_Intensity=0.25
 S1_VigRadius=0.33
@@ -66,7 +66,7 @@ S1_Tint=1, 1, 1
 S2_Scale=0.0
 S2_Intensity=0.0
 S2_Offset=-1.65
-S2_Axis(°)=0
+S2_Axis(?=0
 S2_Edge_Curve=5.0
 S2_Edge_Intensity=0.0
 S2_VigRadius=0.5
@@ -79,7 +79,7 @@ S2_Tint=0.498, 1, 1
 S3_Scale=0.0
 S3_Intensity=0.0
 S3_Offset=0.0
-S3_Axis(°)=0
+S3_Axis(?=0
 S3_Edge_Curve=8.0
 S3_Edge_Intensity=3.0
 S3_VigRadius=0.5
@@ -92,7 +92,7 @@ S3_Tint=0.498, 1, 1
 S4_Scale=2.0
 S4_Intensity=0.01
 S4_Offset=0.66
-S4_Axis(°)=0
+S4_Axis(?=141
 S4_Edge_Curve=4.0
 S4_Edge_Intensity=0.25
 S4_VigRadius=0.5
