--- a/enbseries/heavyFog.ini
+++ b/enbseries/heavyFog.ini
@@ -527,6 +527,14 @@ LightAmountMultiplierDusk=1.0
 LightAmountMultiplierNight=1.0
 LightAmountMultiplierInteriorDay=1.0
 LightAmountMultiplierInteriorNight=1.0
+ReflectionAmountMultiplierDawn=1.0
+ReflectionAmountMultiplierSunrise=1.0
+ReflectionAmountMultiplierDay=1.0
+ReflectionAmountMultiplierSunset=1.0
+ReflectionAmountMultiplierDusk=1.0
+ReflectionAmountMultiplierNight=1.0
+ReflectionAmountMultiplierInteriorDay=1.0
+ReflectionAmountMultiplierInteriorNight=1.0
 [GRASS]
 DirectionalMultiplierDawn=1.0
 DirectionalMultiplierSunrise=1.0
