--- a/enbseries/enbdepthoffield.fx.ini
+++ b/enbseries/enbdepthoffield.fx.ini
@@ -20,6 +20,6 @@ DOF: Bokeh shape max size=15.0
 DOF: Bokeh shape vertices=6
 DOF: Bokeh shape quality=5
 DOF: Bokeh shape roundness=1.0
-DOF: Bokeh shape rotation (°)=15.0
+DOF: Bokeh shape rotation (?=15.0
 DOF: Bokeh shape aspect ratio=1.0
 DOF: Gaussian postblur width=4.0
