--- a/enbseries/lightshadow.ini
+++ b/enbseries/lightshadow.ini
@@ -658,6 +658,14 @@ LightAmountMultiplierDusk=0.66
 LightAmountMultiplierNight=0.66
 LightAmountMultiplierInteriorDay=0.66
 LightAmountMultiplierInteriorNight=0.66
+ReflectionAmountMultiplierDawn=1.0
+ReflectionAmountMultiplierSunrise=1.0
+ReflectionAmountMultiplierDay=1.0
+ReflectionAmountMultiplierSunset=1.0
+ReflectionAmountMultiplierDusk=1.0
+ReflectionAmountMultiplierNight=1.0
+ReflectionAmountMultiplierInteriorDay=1.0
+ReflectionAmountMultiplierInteriorNight=1.0
 
 [GRASS]
 IgnoreWeatherSystem=true
