--- a/Root/enbseries/enbeffect.fx.ini
+++ b/Root/enbseries/enbeffect.fx.ini
@@ -1,5 +1,5 @@
 [ENBEFFECT.FX]
-TECHNIQUE=0
+TECHNIQUE=3
 CC: Gamma=1.0
 CC: In black=0.0
 CC: In white=1.0
@@ -45,9 +45,9 @@ IN: AdaptationMax=0.9
 IN: AdaptationMin=0.5
 Color Shading=false
 Dithering=true
-Adapt Tool Enabled=false
-Adapt Max Brightness (log2 scale)=3.0
-Adapt Min Brightness (log2 scale)=-9.0
+Adapt Tool Enabled=true
+Adapt Max Brightness (log2 scale)=2.0
+Adapt Min Brightness (log2 scale)=-5.0
 -------<<< Superl3 ENB >>>-------=0
 --------| Exterior Day |--------=0
 --------| Exterior Night |--------=0
