clear night done for now

--- a/Root/enbseries.ini
+++ b/Root/enbseries.ini
@@ -29,7 +29,7 @@ EnableSunRays=true
 EnableVolumetricRays=true
 EnableSunGlare=true
 EnableWater=true
-EnableUnderwaterShader=true
+EnableUnderwaterShader=false
 EnableWetSurfaces=true
 EnableRainWetSurfaces=true
 EnableNormalMappingShadows=true
@@ -533,7 +533,7 @@ AmbientMinLevelSunrise=0.4
 AmbientMinLevelDay=0.25
 AmbientMinLevelSunset=0.4
 AmbientMinLevelDusk=0.45
-AmbientMinLevelNight=0.52
+AmbientMinLevelNight=0.35
 AmbientMinLevelInteriorDay=0.01
 AmbientMinLevelInteriorNight=0.01
 IgnoreWeatherSystemInterior=false
@@ -1374,13 +1374,13 @@ IgnoreWeatherSystemInterior=true
 [RAYS]
 IgnoreWeatherSystem=true
 Quality=2
-Type=2
-SunRaysMultiplierDawn=0.05
-SunRaysMultiplierSunrise=0.03
-SunRaysMultiplierDay=0.02
-SunRaysMultiplierSunset=0.03
+Type=0
+SunRaysMultiplierDawn=0.5
+SunRaysMultiplierSunrise=0.5
+SunRaysMultiplierDay=0.5
+SunRaysMultiplierSunset=0.5
 SunRaysMultiplierDusk=0.05
-SunRaysMultiplierNight=0.0
+SunRaysMultiplierNight=0.5
 SunRaysMultiplierInteriorDay=0.0
 SunRaysMultiplierInteriorNight=0.0
 IgnoreWeatherSystemInterior=false
@@ -1392,7 +1392,7 @@ SkyColorAmountDusk=1.0
 SkyColorAmountNight=1.0
 SkyColorAmountInteriorDay=0.0
 SkyColorAmountInteriorNight=0.0
-UseLinearMath=false
+UseLinearMath=true
 
 [VOLUMETRICRAYS]
 IgnoreWeatherSystem=true
