sunrise done, overall volumetric rays adjusted

--- a/Root/enbseries.ini
+++ b/Root/enbseries.ini
@@ -76,11 +76,11 @@ ApertureTime=0.05
 
 [BLOOM]
 IgnoreWeatherSystem=true
-AmountDawn=0.25
-AmountSunrise=0.2
+AmountDawn=0.32
+AmountSunrise=0.25
 AmountDay=0.2
-AmountSunset=0.2
-AmountDusk=0.25
+AmountSunset=0.25
+AmountDusk=0.32
 AmountNight=0.3
 AmountInteriorDay=0.2
 AmountInteriorNight=0.25
@@ -270,12 +270,12 @@ CloudsEdgeClamp=0.33
 CloudsEdgeIntensity=8.0
 CloudsEdgeFadeRange=0.15
 CloudsEdgeMoonMultiplier=1.0
-SunIntensityDawn=3.0
-SunIntensitySunrise=2.0
+SunIntensityDawn=1.0
+SunIntensitySunrise=1.0
 SunIntensityDay=1.0
-SunIntensitySunset=2.0
-SunIntensityDusk=3.0
-SunIntensityNight=2.0
+SunIntensitySunset=1.0
+SunIntensityDusk=1.0
+SunIntensityNight=1.0
 SunIntensityInteriorDay=1.0
 SunIntensityInteriorNight=1.0
 SunDesaturationDawn=0.0
@@ -442,11 +442,11 @@ FogColorCurveDusk=1.0
 FogColorCurveNight=1.0
 FogColorCurveInteriorDay=1.0
 FogColorCurveInteriorNight=1.0
-FogAmountMultiplierDawn=1.0
-FogAmountMultiplierSunrise=1.0
+FogAmountMultiplierDawn=1.2
+FogAmountMultiplierSunrise=1.5
 FogAmountMultiplierDay=1.0
-FogAmountMultiplierSunset=1.0
-FogAmountMultiplierDusk=1.0
+FogAmountMultiplierSunset=1.5
+FogAmountMultiplierDusk=1.2
 FogAmountMultiplierNight=1.0
 FogAmountMultiplierInteriorDay=1.0
 FogAmountMultiplierInteriorNight=1.0
@@ -475,9 +475,9 @@ FogColorFilterNight=1, 1, 1
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
 ColorPowDawn=1.0
-ColorPowSunrise=1.0
+ColorPowSunrise=1.25
 ColorPowDay=1.0
-ColorPowSunset=1.0
+ColorPowSunset=1.25
 ColorPowDusk=1.0
 ColorPowNight=1.0
 ColorPowInteriorDay=1.0
@@ -528,11 +528,11 @@ CubemapFresnelCurveInteriorNight=2.0
 IgnoreWeatherSystem=false
 HighPrecision=true
 Quality=1
-AmbientMinLevelDawn=0.45
-AmbientMinLevelSunrise=0.4
+AmbientMinLevelDawn=0.32
+AmbientMinLevelSunrise=0.3
 AmbientMinLevelDay=0.25
-AmbientMinLevelSunset=0.4
-AmbientMinLevelDusk=0.45
+AmbientMinLevelSunset=0.3
+AmbientMinLevelDusk=0.32
 AmbientMinLevelNight=0.35
 AmbientMinLevelInteriorDay=0.01
 AmbientMinLevelInteriorNight=0.01
@@ -979,32 +979,32 @@ OptimizeSmallRange=true
 
 [IMAGEBASEDLIGHTING]
 IgnoreWeatherSystem=true
-AdditiveAmountDawn=0.05
+AdditiveAmountDawn=0.08
 AdditiveAmountSunrise=0.05
-AdditiveAmountDay=0.1
+AdditiveAmountDay=0.03
 AdditiveAmountSunset=0.05
-AdditiveAmountDusk=0.05
-AdditiveAmountNight=0.05
+AdditiveAmountDusk=0.08
+AdditiveAmountNight=0.25
 AdditiveAmountInteriorDay=0.0
 AdditiveAmountInteriorNight=0.0
-MultiplicativeAmountDawn=0.15
-MultiplicativeAmountSunrise=0.15
-MultiplicativeAmountDay=0.3
-MultiplicativeAmountSunset=0.15
-MultiplicativeAmountDusk=0.15
-MultiplicativeAmountNight=0.15
+MultiplicativeAmountDawn=0.27
+MultiplicativeAmountSunrise=0.25
+MultiplicativeAmountDay=0.2
+MultiplicativeAmountSunset=0.25
+MultiplicativeAmountDusk=0.27
+MultiplicativeAmountNight=0.5
 MultiplicativeAmountInteriorDay=0.0
 MultiplicativeAmountInteriorNight=0.0
-ReflectiveAmountDawn=0.08
-ReflectiveAmountSunrise=0.07
-ReflectiveAmountDay=0.3
-ReflectiveAmountSunset=0.07
-ReflectiveAmountDusk=0.08
-ReflectiveAmountNight=0.1
+ReflectiveAmountDawn=0.3
+ReflectiveAmountSunrise=0.2
+ReflectiveAmountDay=0.2
+ReflectiveAmountSunset=0.2
+ReflectiveAmountDusk=0.3
+ReflectiveAmountNight=0.75
 ReflectiveAmountInteriorDay=0.0
 ReflectiveAmountInteriorNight=0.0
 IgnoreWeatherSystemInterior=false
-ApplySpecularMap=false
+ApplySpecularMap=true
 
 [RAIN]
 IgnoreWeatherSystem=true
@@ -1375,12 +1375,12 @@ IgnoreWeatherSystemInterior=true
 IgnoreWeatherSystem=true
 Quality=2
 Type=0
-SunRaysMultiplierDawn=0.5
-SunRaysMultiplierSunrise=0.5
-SunRaysMultiplierDay=0.5
-SunRaysMultiplierSunset=0.5
-SunRaysMultiplierDusk=0.05
-SunRaysMultiplierNight=0.5
+SunRaysMultiplierDawn=0.0
+SunRaysMultiplierSunrise=0.125
+SunRaysMultiplierDay=0.25
+SunRaysMultiplierSunset=0.125
+SunRaysMultiplierDusk=0.0
+SunRaysMultiplierNight=0.0
 SunRaysMultiplierInteriorDay=0.0
 SunRaysMultiplierInteriorNight=0.0
 IgnoreWeatherSystemInterior=false
@@ -1397,11 +1397,11 @@ UseLinearMath=true
 [VOLUMETRICRAYS]
 IgnoreWeatherSystem=true
 Quality=2
-IntensityDawn=0.15
-IntensitySunrise=0.12
+IntensityDawn=0.2
+IntensitySunrise=0.15
 IntensityDay=0.1
-IntensitySunset=0.12
-IntensityDusk=0.15
+IntensitySunset=0.15
+IntensityDusk=0.2
 IntensityNight=0.33
 IntensityInteriorDay=0.0
 IntensityInteriorNight=0.0
@@ -1425,45 +1425,45 @@ IgnoreWeatherSystemInterior=false
 
 [LENSFLARE_GAME]
 IgnoreWeatherSystem=true
-IntensityDawn=0.0
-IntensitySunrise=0.0
-IntensityDay=0.0
-IntensitySunset=0.0
-IntensityDusk=0.0
-IntensityNight=0.0
-IntensityInteriorDay=0.0
-IntensityInteriorNight=0.0
+IntensityDawn=0.05
+IntensitySunrise=0.05
+IntensityDay=0.05
+IntensitySunset=0.05
+IntensityDusk=0.05
+IntensityNight=0.05
+IntensityInteriorDay=0.05
+IntensityInteriorNight=0.05
 IgnoreWeatherSystemInterior=false
 
 [SUNGLARE]
 IgnoreWeatherSystem=true
-GlowIntensityDawn=0.0
+GlowIntensityDawn=1.0
 GlowIntensitySunrise=0.0
-GlowIntensityDay=0.0
-GlowIntensitySunset=0.0
-GlowIntensityDusk=0.0
-GlowIntensityNight=0.0
+GlowIntensityDay=1.0
+GlowIntensitySunset=1.0
+GlowIntensityDusk=1.0
+GlowIntensityNight=1.0
 GlowIntensityInteriorDay=0.0
 GlowIntensityInteriorNight=0.0
 IgnoreWeatherSystemInterior=false
 
 [PROCEDURALSUN]
 IgnoreWeatherSystem=true
-Size=0.66
-EdgeSoftness=0.05
-GlowIntensityDawn=1.0
-GlowIntensitySunrise=1.0
-GlowIntensityDay=1.0
-GlowIntensitySunset=1.0
-GlowIntensityDusk=1.0
+Size=0.75
+EdgeSoftness=0.03
+GlowIntensityDawn=1.5
+GlowIntensitySunrise=10.0
+GlowIntensityDay=2.5
+GlowIntensitySunset=10.0
+GlowIntensityDusk=1.5
 GlowIntensityNight=1.0
 GlowIntensityInteriorDay=1.0
 GlowIntensityInteriorNight=1.0
-GlowCurveDawn=1.0
-GlowCurveSunrise=1.0
-GlowCurveDay=1.0
-GlowCurveSunset=1.0
-GlowCurveDusk=1.0
+GlowCurveDawn=0.0
+GlowCurveSunrise=0.01
+GlowCurveDay=0.02
+GlowCurveSunset=0.01
+GlowCurveDusk=0.0
 GlowCurveNight=1.0
 GlowCurveInteriorDay=1.0
 GlowCurveInteriorNight=1.0
