cloud color adjusted, Interior fixed

--- a/Root/enbseries/enbadaptation.fx.ini
+++ b/Root/enbseries/enbadaptation.fx.ini
@@ -12,3 +12,13 @@ Adapt Min Brightness Night=-2.66
 Adapt Low  Percent Night=0.6
 Adapt High Percent Night=0.75
 =0
+Auto Exposure InteriorDay=1.25
+Adapt Max Brightness InteriorDay=-1.5
+Adapt Min Brightness InteriorDay=-3.12
+Adapt Low  Percent InteriorDay=0.6
+Adapt High Percent InteriorDay=0.75
+Auto Exposure InteriorNight=2.75
+Adapt Max Brightness InteriorNight=-1.0
+Adapt Min Brightness InteriorNight=-2.66
+Adapt Low  Percent InteriorNight=0.6
+Adapt High Percent InteriorNight=0.75
