sunrise, sunset adaptation sensitivity fixed

--- a/Root/enbseries.ini
+++ b/Root/enbseries.ini
@@ -56,11 +56,11 @@ EnableMultipleWeathers=false
 EnableLocationWeather=true
 
 [TIMEOFDAY]
-DawnDuration=2.5
-SunriseTime=8.0
+DawnDuration=0.5
+SunriseTime=7.5
 DayTime=13.0
-SunsetTime=18.0
-DuskDuration=2.5
+SunsetTime=18.5
+DuskDuration=0.5
 NightTime=1.0
 
 [ADAPTATION]
@@ -266,9 +266,9 @@ CloudsColorFilterDusk=1, 1, 1
 CloudsColorFilterNight=1, 1, 1
 CloudsColorFilterInteriorDay=1, 1, 1
 CloudsColorFilterInteriorNight=1, 1, 1
-CloudsEdgeClamp=0.3
-CloudsEdgeIntensity=80.0
-CloudsEdgeFadeRange=0.66
+CloudsEdgeClamp=0.25
+CloudsEdgeIntensity=12.5
+CloudsEdgeFadeRange=0.95
 CloudsEdgeMoonMultiplier=1.0
 SunIntensityDawn=1.0
 SunIntensitySunrise=1.0
@@ -294,14 +294,14 @@ SunColorFilterDusk=1, 1, 1
 SunColorFilterNight=1, 1, 1
 SunColorFilterInteriorDay=1, 1, 1
 SunColorFilterInteriorNight=1, 1, 1
-MoonIntensityDawn=3.0
-MoonIntensitySunrise=3.0
-MoonIntensityDay=3.0
-MoonIntensitySunset=3.0
-MoonIntensityDusk=3.0
-MoonIntensityNight=3.0
-MoonIntensityInteriorDay=3.0
-MoonIntensityInteriorNight=3.0
+MoonIntensityDawn=4.0
+MoonIntensitySunrise=4.0
+MoonIntensityDay=4.0
+MoonIntensitySunset=4.0
+MoonIntensityDusk=4.0
+MoonIntensityNight=4.0
+MoonIntensityInteriorDay=4.0
+MoonIntensityInteriorNight=4.0
 MoonDesaturationDawn=0.0
 MoonDesaturationSunrise=0.0
 MoonDesaturationDay=0.0
@@ -370,11 +370,11 @@ DirectLightingColorFilterDusk=1, 1, 1
 DirectLightingColorFilterNight=1, 1, 1
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
-AmbientLightingIntensityDawn=1.4
+AmbientLightingIntensityDawn=0.33
 AmbientLightingIntensitySunrise=1.48
 AmbientLightingIntensityDay=1.62
 AmbientLightingIntensitySunset=1.48
-AmbientLightingIntensityDusk=1.4
+AmbientLightingIntensityDusk=0.33
 AmbientLightingIntensityNight=1.35
 AmbientLightingIntensityInteriorDay=1.0
 AmbientLightingIntensityInteriorNight=1.0
@@ -528,11 +528,11 @@ CubemapFresnelCurveInteriorNight=2.0
 IgnoreWeatherSystem=false
 HighPrecision=true
 Quality=1
-AmbientMinLevelDawn=0.32
-AmbientMinLevelSunrise=0.3
+AmbientMinLevelDawn=0.65
+AmbientMinLevelSunrise=0.45
 AmbientMinLevelDay=0.25
-AmbientMinLevelSunset=0.3
-AmbientMinLevelDusk=0.32
+AmbientMinLevelSunset=0.45
+AmbientMinLevelDusk=0.65
 AmbientMinLevelNight=0.35
 AmbientMinLevelInteriorDay=0.01
 AmbientMinLevelInteriorNight=0.01
@@ -592,7 +592,7 @@ ApplyToSSS=true
 IgnoreWeatherSystem=true
 SubSurfaceScatteringMultiplierDawn=0.5
 SubSurfaceScatteringMultiplierSunrise=0.5
-SubSurfaceScatteringMultiplierDay=0.5
+SubSurfaceScatteringMultiplierDay=0.0
 SubSurfaceScatteringMultiplierSunset=0.5
 SubSurfaceScatteringMultiplierDusk=0.5
 SubSurfaceScatteringMultiplierNight=0.5
@@ -1283,23 +1283,23 @@ EnableTessellation=true
 DisplacementQuality=2
 TessellationQuality=2
 ReflectionAmount=0.9
-FresnelMultiplier=0.5
-DispersionAmount=0.5
-CausticsAmount=0.5
+FresnelMultiplier=0.25
+DispersionAmount=0.66
+CausticsAmount=0.75
 SunSpecularMultiplier=1.5
 SunScatteringMultiplier=5.0
-WavesAmplitudeDawn=1.0
-WavesAmplitudeSunrise=1.0
-WavesAmplitudeDay=1.0
-WavesAmplitudeSunset=1.0
-WavesAmplitudeDusk=1.0
-WavesAmplitudeNight=1.0
-WavesAmplitudeInteriorDay=1.0
-WavesAmplitudeInteriorNight=1.0
-Muddiness=0.33
+WavesAmplitudeDawn=1.33
+WavesAmplitudeSunrise=1.33
+WavesAmplitudeDay=1.33
+WavesAmplitudeSunset=1.33
+WavesAmplitudeDusk=1.33
+WavesAmplitudeNight=1.33
+WavesAmplitudeInteriorDay=1.33
+WavesAmplitudeInteriorNight=1.33
+Muddiness=0.75
 BrightnessDawn=1.0
 BrightnessSunrise=0.75
-BrightnessDay=1.5
+BrightnessDay=1.25
 BrightnessSunset=0.75
 BrightnessDusk=1.0
 BrightnessNight=1.0
@@ -1311,12 +1311,12 @@ EnableVolumetricShadow=true
 EnableCloudsShadow=true
 EnableLighting=true
 VolumetricShadowQuality=2
-FresnelMin=0.1
+FresnelMin=0.25
 FresnelMax=1.0
 SunLightingMultiplier=0.5
 WetMultiplier=0.75
-ExpandHDR=false
-ReflectionCubemapInterior=1.0
+ExpandHDR=true
+ReflectionCubemapInterior=0.9
 MuddinessInterior=1.0
 
 [UNDERWATER]
@@ -1325,14 +1325,14 @@ EnableCaustics=true
 HighQualityCaustics=false
 CausticsAmount=5.0
 TintAmount=12.5
-CausticsAmountDawn=2.0
-CausticsAmountSunrise=2.0
-CausticsAmountDay=2.0
-CausticsAmountSunset=2.0
-CausticsAmountDusk=2.0
-CausticsAmountNight=2.0
-CausticsAmountInteriorDay=2.0
-CausticsAmountInteriorNight=2.0
+CausticsAmountDawn=1.0
+CausticsAmountSunrise=1.0
+CausticsAmountDay=1.0
+CausticsAmountSunset=1.0
+CausticsAmountDusk=1.0
+CausticsAmountNight=1.0
+CausticsAmountInteriorDay=1.0
+CausticsAmountInteriorNight=1.0
 IgnoreWeatherSystemInterior=false
 
 [GAMEVOLUMETRICRAYS]
@@ -1398,9 +1398,9 @@ UseLinearMath=true
 IgnoreWeatherSystem=true
 Quality=2
 IntensityDawn=0.4
-IntensitySunrise=0.25
-IntensityDay=0.3
-IntensitySunset=0.25
+IntensitySunrise=0.1
+IntensityDay=0.05
+IntensitySunset=0.1
 IntensityDusk=0.4
 IntensityNight=0.33
 IntensityInteriorDay=0.0
