--- a/Root/enbseries/enbadaptation.fx.ini
+++ b/Root/enbseries/enbadaptation.fx.ini
@@ -2,7 +2,7 @@
 TECHNIQUE=1
 いいいいいいいいいい=0
 Auto Exposure Bias (log2 scale)=1.0
-Adapt Max Brightness (log2 scale)=-1.5
+Adapt Max Brightness (log2 scale)=-1.1
 Adapt Min Brightness (log2 scale)=-3.115
 Adapt Low  Percent=0.6
 Adapt High Percent=0.75
@@ -22,3 +22,8 @@ Adapt Max Brightness InteriorNight=-1.0
 Adapt Min Brightness InteriorNight=-2.66
 Adapt Low  Percent InteriorNight=0.6
 Adapt High Percent InteriorNight=0.75
+Auto Exposure Sunrise=2.0
+Adapt Max Brightness Sunrise=-1.25
+Adapt Min Brightness Sunrise=-2.75
+Adapt Low  Percent Sunrise=0.6
+Adapt High Percent Sunrise=0.75
