--- a/Root/enbseries/enbeffect.fx.ini
+++ b/Root/enbseries/enbeffect.fx.ini
@@ -16,7 +16,7 @@ CC: Channel mixer R=1, 0, 0
 CC: Channel mixer G=0, 1, 0
 CC: Channel mixer B=0, 0, 1
 ED: Brightness=1.0
-ED: Contrast=1.45
+ED: Contrast=1.25
 ED: LinearStart=0.22
 ED: LinearLength=0.35
 ED: Black=1.33
@@ -45,7 +45,7 @@ IN: AdaptationMax=0.9
 IN: AdaptationMin=0.5
 Color Shading=false
 Dithering=true
-Adapt Tool Enabled=true
+Adapt Tool Enabled=false
 Adapt Max Brightness (log2 scale)=2.0
 Adapt Min Brightness (log2 scale)=-5.0
 -------<<< Superl3 ENB >>>-------=0
@@ -54,13 +54,13 @@ Adapt Min Brightness (log2 scale)=-5.0
 --------| Interior Day |--------=0
 --------| Interior Night |--------=0
 ----------------------------------=0
-Desaturation=0.7
-HueShift=0.4
-Resaturation=0.3
+Desaturation=0.33
+HueShift=0.35
+Resaturation=0.75
 Saturation=1.0
-ED: Saturation=1.25
+ED: Saturation=1.2
 ED: Pedestal=0.0
-EN: Saturation=1.2
+EN: Saturation=1.25
 EN: Pedestal=0.0
 ID: Saturation=1.15
 ID: Pedestal=0.0
@@ -510,4 +510,4 @@ Pedestal (Day)=0.0
 Pedestal (Night)=0.0
 Pedestal (Interior)=0.0
 --------| Interior |--------=0
-IN: Saturation=1.1
+IN: Saturation=1.15
